<resources>
    <string name="app_name">Urban Homework</string>

    <string name="character_image">Character Image</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="apply">Apply</string>
    <string name="retry">Retry</string>
    <string name="personal_details">Personal Details</string>
    <string name="location_details">Location Details</string>
    <string name="show_residents">Show Residents</string>
    <string name="fetching_location_details">Fetching Location Details…</string>
    <string name="fetching_character_details">Fetching Character Details…</string>

    <string name="character_name">Name: %1$s</string>
    <string name="character_gender">Gender: %1$s</string>
    <string name="character_specie">Specie: %1$s</string>
    <string name="character_status">Status: %1$s</string>
    <string name="character_type">Type: %1$s</string>

    <string name="location_name">Name: %1$s</string>
    <string name="location_type">Type: %1$s</string>
    <string name="location_dimension">Dimension: %1$s</string>
</resources>
