...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <ImageView
                android:id="@+id/iv_character_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/character_image" />
        </com.google.android.material.card.MaterialCardView>

...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/location_details"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/btn_show_location_residents"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_show_location_residents" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_show_location_residents"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
...
